--- a/views/room.ejs
+++ b/views/room.ejs
@@ -64,7 +64,7 @@
         position: relative;
         bottom: 5px;
       }
-      li p.member-status{
+      li p.member-email{
         font-size: 18px;
         margin: 0px;
         position: relative;
@@ -97,10 +97,52 @@
       #messages{
         margin: 4px;
         color: white;
-        font-size: 20px;
+        overflow-y: scroll;
+      }
+      #messages::-webkit-scrollbar { width: 4px; }
+      #messages::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px var(--tangerine); }
+      #messages::-webkit-scrollbar-thumb { background-color: var(--bergundy); }
+
+      li{
+        margin: 5px;
+        margin-bottom: 40px;
+      }
+      .thumbnail{
+        width: 40px;
       }
       .message{
         word-wrap: break-word;
+        padding: 5px;
+      }
+      .message .thumbnail{
+        float: left;
+        margin-right: 4px;
+      }
+      .mine{
+        text-align: right;
+        padding: 5px;
+      }
+      .mine .thumbnail{
+        float: right;
+        margin-left: 4px;
+      }
+      .msg{
+        background-color: var(--orange);
+        font-size: 20px;
+        padding: 5px;
+        position: relative;
+        top: 24px;
+      }
+      .mine .msg{
+        right: -54px;
+      }
+      .username{
+        font-size: 15px;
+        position: relative;
+        bottom: 8px;
+      }
+      .message .msg{
+        left: -54px;
       }
     </style>
   </head>
@@ -113,13 +155,13 @@
             <img src="<%= member.thumbnail %>" alt="Member thumbnail" class="member-thumbnail left">
               <p class="text-flow member-username"><%= member.username %></p>
               <br>
-              <p class="text-flow member-status"><%= member.email.substring(0, member.email.indexOf('@')) %></p>
+              <p class="text-flow member-email"><%= member.email.substring(0, member.email.indexOf('@')) %></p>
           </li>
         <% } %>
       </ul>
       <div id="chat" class="z-depth-1">
         <ul id="messages"></ul>
-        <input type="text" name="message" id="message-box" placeholder="Quack here" class="browser-default z-depth-1">
+        <input type="text" id="message-box" placeholder="Quack here" class="browser-default z-depth-1">
       </div>
     </div>
 
@@ -129,9 +171,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script type="text/javascript">
       var socket = io.connect();
+      var members = <%- JSON.stringify(members) %>
+      var user = <%- JSON.stringify(user) %>
+
+      $.get('/messages', messages => {
+        for(message of messages){
+          let sender = members.find(o => o._id === message.sender);
+
+          if (message.sender != user._id) {
+            $('#messages').append(`
+              <li class="message">
+                <img src="${sender.thumbnail}" alt="Sender thumbnail" class="thumbnail z-depth-1"/>
+                <span class="username">${sender.username}</span>
+                <span class="msg z-depth-1">${message.msg}</span>
+              </li>
+            `);
+          } else {
+            $('#messages').append(`
+              <li class="mine">
+                <img src="${sender.thumbnail}" alt="Your thumbnail" class="thumbnail z-depth-1"/>
+                <span class="msg z-depth-1">${message.msg}</span>
+                <span class="username">You</span>
+              </li>
+            `);
+          }
+        }
+        $('#messages').scrollTop($('#messages')[0].scrollHeight);
+      })
 
       socket.on('message', data => {
-        $('#messages').append(`<li class="message"><b>${data.sender}:</b> ${data.msg}</li>`);
+        let sender = members.find(o => o._id === data.sender);
+        $('#messages').append(`
+          <li class="message">
+            <img src="${sender.thumbnail}" alt="Sender thumbnail" class="thumbnail z-depth-1"/>
+            <span class="username">${sender.username}</span>
+            <span class="msg z-depth-1">${data.msg}</span>
+          </li>
+        `);
         $('#messages').scrollTop($('#messages')[0].scrollHeight);
       })
 
@@ -140,10 +216,20 @@
           if ($(this).val() != '') {
             socket.emit('message', {
               msg: $(this).val(),
-              sender: <%- JSON.stringify(user.username) %>,
+              sender: user._id,
               timestamp: + new Date()
             });
-            $('input').val('');
+
+            $('#messages').append(`
+              <li class="mine">
+                <img src="${user.thumbnail}" alt="Your thumbnail" class="thumbnail z-depth-1"/>
+                <span class="msg z-depth-1">${$(this).val()}</span>
+                <span class="username">You</span>
+              </li>
+            `);
+            $('#messages').scrollTop($('#messages')[0].scrollHeight);
+
+            $(this).val('');
           }
         }
       })
