--- a/views/room.ejs
+++ b/views/room.ejs
@@ -14,6 +14,8 @@
         --yellow: #FDD264;
         --tangerine: #F56B39;
         --bergundy: #670305;
+        --green: #6AF53A;
+        --red: #EB2A2A;
       }
       #quackchat{
         margin: 5px;
@@ -110,6 +112,7 @@
       li{
         margin: 5px;
         margin-bottom: 20px;
+        position: relative;
       }
       .thumbnail{
         width: 40px;
@@ -161,67 +164,104 @@
       .message .timestamp{
         margin-right: 5px;
       }
+      .online{
+        font-size: 20px;
+        position: absolute;
+        right: 8px;
+        bottom: 1px;
+      }
+      #turn-on-notifi{
+        background-color: var(--yellow);
+      }
+      a.modal-action{
+        color: white;
+        background-color: var(--tangerine);
+      }
+      div.modal-footer{
+        background-color: var(--yellow) !important;
+      }
     </style>
   </head>
   <body>
     <div id="quackchat" class="z-depth-1">
       <ul id="members" class="z-depth-1 hide-on-med-and-down">
         <h3 class="center-align">MEMBERS</h3>
-        <% for(member of members){ %>
-          <li class="member z-depth-1">
-            <img src="<%= member.thumbnail %>" alt="Member thumbnail" class="member-thumbnail left">
-            <p class="text-flow member-username"><%= member.username %></p>
-              <br>
-            <p class="text-flow member-email"><%= member.email.substring(0, member.email.indexOf('@')) %></p>
-          </li>
-        <% } %>
       </ul>
       <div id="chat" class="z-depth-1">
         <ul id="messages"></ul>
         <input type="text" id="message-box" placeholder="Quack here" class="browser-default z-depth-1" autofocus>
       </div>
+      <div id="turn-on-notifi" class="modal">
+        <div class="modal-content">
+          <h4>Hear out for Quacks!</h4>
+          <p>Turn on notifications to never miss a Quack from a fellow Quacker!</p>
+        </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect btn-flat">Turn 'em on!</a>
+        </div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+    <script>
+
+    </script>
     <script type="text/javascript">
       var socket = io.connect();
       var members = <%- JSON.stringify(members) %>
       var user = <%- JSON.stringify(user) %>
 
+      socket.emit('online', user._id);
+      window.addEventListener('visibilitychange', () => {
+        switch (document.visibilityState) {
+          case 'visible':
+            socket.emit('online', user._id);
+            break;
+          case 'hidden':
+            socket.emit('offline', user._id);
+            break;
+        }
+      })
+      window.onbeforeunload = () => {
+        socket.emit('offline', user._id);
+        return null;
+      }
+
+      firebase.initializeApp({
+        apiKey: "AIzaSyAnkUsz67OmDrDfmeudP7qzl7GOUf3fiH0",
+        authDomain: "quackquack-quackchat.firebaseapp.com",
+        databaseURL: "https://quackquack-quackchat.firebaseio.com",
+        projectId: "quackquack-quackchat",
+        storageBucket: "",
+        messagingSenderId: "571642064077"
+      });
+
       function escape(string){
         let newString = [];
         for(char of string){
-          if (char === '&') {
-            newString.push('&amp;');
-          } else if (char === '<') {
-            newString.push('&lt;');
-          } else if (char === '>') {
-            newString.push('&gt;');
-          } else if (char === '"') {
-            newString.push('&quot;');
-          } else if (char === "'") {
-            newString.push('&#x27');
-          } else if (char === '/') {
-            newString.push('&#x2F;');
-          } else if (char === ' ') {
-            newString.push('&nbsp;');
-          } else {
-            newString.push(char)
-          }
+               if (char === '&')  newString.push( '&amp;'  );
+          else if (char === '<')  newString.push( '&lt;'   );
+          else if (char === '>')  newString.push( '&gt;'   );
+          else if (char === '"')  newString.push( '&quot;' );
+          else if (char === "'")  newString.push( '&#x27'  );
+          else if (char === '/')  newString.push( '&#x2F;' );
+          else if (char === ' ')  newString.push( '&nbsp;' );
+          else                    newString.push(   char   );
         }
         return newString.join('');
       }
 
       function diff(timestamp){
         let diff = +new Date() - timestamp;
-        if      (diff < 1000)                    { return 'Now' }
-        else if (diff < 1000*60)                 { return Math.round(diff/1000) + 's' }
-        else if (diff < 1000*60*60)              { return Math.round(diff/(1000*60)) + 'm' }
-        else if (diff < 1000*60*60*24)           { return Math.round(diff/(1000*60*60)) + 'h' }
-        else if (diff < 1000*60*60*24*7)         { return Math.round(diff/(1000*60*60*24)) + 'd' }
+             if     (diff < 1000)         return               'Now'                    ;
+        else if    (diff < 1000*60)       return    Math.round(diff/1000) + 's'         ;
+        else if   (diff < 1000*60*60)     return   Math.round(diff/(1000*60)) + 'm'     ;
+        else if  (diff < 1000*60*60*24)   return  Math.round(diff/(1000*60*60)) + 'h'   ;
+        else if (diff < 1000*60*60*24*07) return Math.round(diff/(1000*60*60*24)) + 'd' ;
         else {
           let a = new Date(timestamp);
           let months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
@@ -235,6 +275,43 @@
 
           return date + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec;
         }
+      }
+
+      const messaging = firebase.messaging();
+      if (Notification.permission === 'default') {
+        $('a.modal-action').click(() => {
+          messaging.requestPermission()
+          .then(function(){
+            return messaging.getToken();
+            console.log('yeah!');
+          })
+          .then(function(token){
+            console.log(token);
+          });
+        });
+        setTimeout(() => {
+          $('#turn-on-notifi').modal({
+            dismissible: false
+          });
+          $('#turn-on-notifi').modal('open');
+        }, 2500);
+      }
+
+      function you(member){
+        return (member._id === user._id) ? 'You' : member.username;
+      }
+
+      for(member of members){
+        $('#members').append(`
+          <li id="${member._id}" class="member z-depth-1">
+            <img src="${member.thumbnail}" alt="Member thumbnail" class="member-thumbnail left">
+            <p class="text-flow member-username">${you(member)}</p>
+            <span class="online">&#9632;</span>
+              <br>
+            <p class="text-flow member-email">${member.email.substring(0, member.email.indexOf('@'))}</p>
+          </li>
+        `);
+        $(`#${member._id} .online`).css('color', (member.online) ? 'var(--green)' : 'var(--red)');
       }
 
       $.get('/messages', messages => {
@@ -301,6 +378,9 @@
           }
         }
       })
+
+      socket.on('online', userID => $(`#${userID} .online`).css('color', 'var(--green)'));
+      socket.on('offline', userID => $(`#${userID} .online`).css('color', 'var(--red)'));
 
       $('html').css('height', ($(window).height() - 10) + 'px');
       $('body').css('height', ($(window).height() - 10) + 'px');
